memory management update for the mapreduce tasks