@@ -34,13 +34,16 @@ public class HalvadeResourceManager {
     protected static final int ALL = Integer.MAX_VALUE;
     protected static final int MEM_AM = (int) (1.5*1024);
     protected static final int VCORES_AM = 1;
+    protected static final int MEM_ALN = (int) (10*1024);
     protected static final int MEM_STAR = (int) (16*1024); // 16 for hg -> reduced reference
-    protected static final int MEM_REF = (int) (16*1024); // 16 for hg
+    protected static final int MEM_REF = (int) (4*1024); // 4g for hg fasta 
+    protected static final int MEM_ELPREP = (int) (16*1024); // 16g for hg for 50x coverage
+    // gatk 2-4gb per thread!
     protected static final int[][] RESOURCE_REQ = { 
         //mapmem, redmem
         {MEM_STAR,  ALL},     // RNA with shared memory pass1
-        {MEM_STAR,  MEM_REF}, // RNA with shared memory pass2
-        {MEM_REF,   MEM_REF}, // DNA
+        {MEM_STAR,  MEM_ELPREP}, // RNA with shared memory pass2
+        {MEM_ALN,   MEM_ELPREP}, // DNA
         {4*1024,    4*1024}   // combine
     };
     
@@ -51,10 +54,13 @@ public class HalvadeResourceManager {
         BAMinput = BAMinput && type < 3;
         int mmem = RESOURCE_REQ[BAMinput? 3 : type][0];
         int rmem = RESOURCE_REQ[type][1] == ALL ? tmpmem - MEM_AM : RESOURCE_REQ[type][1];
-        if(opt.overrideMem > 0 && type != COMBINE) {
-            if(!BAMinput)
-                mmem = opt.overrideMem;
-            rmem = opt.overrideMem;
+        if (rmem == MEM_ELPREP && !opt.useElPrep) 
+            rmem = MEM_REF;
+        if((opt.overrideMapMem > 0 || opt.overrideRedMem > 0)&& type != COMBINE) {
+            if(!BAMinput && opt.overrideMapMem > 0)
+                mmem = opt.overrideMapMem;
+            if(opt.overrideRedMem > 0)
+                rmem = opt.overrideRedMem;
         }
         if(mmem > opt.mem*1024 || rmem > opt.mem*1024)
             throw new InterruptedException("Not enough memory available on system; memory requirements: " + opt.mem*1024 + "/" + Math.max(rmem, mmem));
@@ -63,16 +69,21 @@ public class HalvadeResourceManager {
         if (opt.setReduceContainers) 
             opt.reducerContainersPerNode = Math.min(tmpvcores, Math.max(tmpmem / rmem, 1));
         
-        opt.maps = Math.max(1,opt.nodes*opt.mapContainersPerNode);
-        Logger.DEBUG("set # map containers: " + opt.maps);
         HalvadeConf.setMapContainerCount(conf, opt.maps);
         HalvadeConf.setVcores(conf, opt.vcores);
         opt.mthreads = Math.max(1, tmpvcores/opt.mapContainersPerNode);
+        if(opt.mthreads > 1 && opt.mthreads % 2 == 1 ) {
+            opt.mthreads++;
+            opt.mapContainersPerNode = Math.min(Math.max(tmpvcores/opt.mthreads,1), Math.max(tmpmem / mmem,1));
+        }
         opt.rthreads = Math.max(1, tmpvcores/opt.reducerContainersPerNode);
         if(opt.smtEnabled) {
             opt.mthreads *=2;
             opt.rthreads *=2;
         }
+        opt.maps = Math.max(1,opt.nodes*opt.mapContainersPerNode);
+        Logger.DEBUG("set # map containers: " + opt.maps);        
+        
         
         Logger.DEBUG("resources set to " + opt.mapContainersPerNode + " maps [" 
                 + opt.mthreads + " cpu , " + mmem + " mb] per node and " 
@@ -86,9 +97,8 @@ public class HalvadeResourceManager {
         else 
             conf.set("mapreduce.reduce.cpu.vcores", "" + opt.rthreads );
         conf.set("mapreduce.reduce.memory.mb", "" + rmem);        
-        conf.set("mapreduce.reduce.java.opts", "-Xmx" + (int)(0.7*rmem) + "m");
-        conf.set("mapreduce.map.java.opts", "-Xmx" + (int)(0.8*mmem) + "m");
-//                + " -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/tmp/halvade/@taskid@.gc"); 
+        conf.set("mapreduce.reduce.java.opts", "-Xmx" + (int)(0.18*rmem) + "m");
+        conf.set("mapreduce.map.java.opts", "-Xmx" + (int)(0.18*mmem) + "m");
         conf.set("mapreduce.job.reduce.slowstart.completedmaps", "0.99");
         
         HalvadeConf.setMapThreads(conf, opt.mthreads);
